# APT

./: APT.gitignore  CMakeLists.txt  readme.md  readme.txt
GUI/: GUI.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
include/: DatabaseFunctions.h  DatabaseManager.h  ImageProcessor.h  TimeUtils.h
src/: DatabaseFunctions.cpp  DatabaseManager.cpp  ImageProcessor.cpp  TimeUtils.cpp  main.cpp
